# Joy2DroidX-server

./: .flake8  .gitignore  README.md  build_client.ps1  j2dx.spec  pyproject.toml  requirements.txt  vs2017.ps1
assets/: j2dx.desktop  tk.ozymandias.j2dx.desktop  version.rc
j2dx/: __init__.py
j2dx/win/: device.py  setup.py
j2dx/win/ViGEm/: client.py
src/: j2dx.py
src/lib/: ViGEmClient.py  __init__.py  nix.py  win.py
src/lib/nix/: device.py  setup.py
src/lib/win/: ViGEmClient.py  setup.py
